--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.myfirmwarewriting">
 
+    <!--USB HOST权限-->
+    <uses-feature android:name="android.hardware.usb.host"/>
+
+    <!--获取读文件权限-->
+    <uses-feature android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <!--获取写文件权限-->
+    <uses-feature android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
